--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -1,28 +1,39 @@
-﻿spring:
-  profiles:
-    active:
+﻿spring: 
+  profiles: 
+    active: 
     - dev
 ---
 server: 
-  port: 8201 
-spring:
+  port: 7001 #注册中心占用7001端口,冒号后面必须要有空格
+   
+spring: 
   profiles: dev
-  application: 
-    name: microservicecloud-config-client
+  application:
+    name: microservicecloud-config-eureka-client
+    
 eureka: 
+  instance: 
+    hostname: eureka7001.com #冒号后面必须要有空格
   client: 
+    register-with-eureka: false #当前的eureka-server自己不注册进服务列表中
+    fetch-registry: false #不通过eureka获取注册信息
     service-url: 
-      defaultZone: http://eureka-dev.com:7001/eureka/   
+      defaultZone: http://eureka7001.com:7001/eureka/
 ---
 server: 
-  port: 8202 
-spring:
+  port: 7001 #注册中心占用7001端口,冒号后面必须要有空格
+   
+spring: 
   profiles: test
-  application: 
-    name: microservicecloud-config-client
+  application:
+    name: microservicecloud-config-eureka-client
+    
 eureka: 
+  instance: 
+    hostname: eureka7001.com #冒号后面必须要有空格
   client: 
+    register-with-eureka: false #当前的eureka-server自己不注册进服务列表中
+    fetch-registry: false #不通过eureka获取注册信息
     service-url: 
-      defaultZone: http://eureka-test.com:7001/eureka/
- 
+      defaultZone: http://eureka7001.com:7001/eureka/
 
