--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/cloudDB01
     username: root
-    password: 123456
+    password: root
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -22,7 +22,7 @@ spring:
       max-wait-millis: 200 
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
+  type-aliases-package: cn.ywj611.springcloud.entities
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
  
@@ -36,7 +36,7 @@ eureka:
  
 info:
   app.name: atguigu-microservicecloud-springcloudconfig01
-  company.name: www.atguigu.com
+  company.name: cn.ywj611.cn
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 ---
@@ -51,7 +51,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/cloudDB02
     username: root
-    password: 123456
+    password: root
     dbcp2:
       min-idle: 5
       initial-size: 5
@@ -61,7 +61,7 @@ spring:
   
 mybatis:
   config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.atguigu.springcloud.entities
+  type-aliases-package: cn.ywj611.springcloud.entities
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml
  
@@ -75,7 +75,7 @@ eureka:
  
 info:
   app.name: atguigu-microservicecloud-springcloudconfig02
-  company.name: www.atguigu.com
+  company.name: cn.ywj611.cn
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 
